# libconfig-haskell

./: .gitignore  .travis.yml  LICENSE  README.md  libconfig.cabal
src/Language/: Libconfig.chs  Libconfig.hs
src/Language/Libconfig/: Bindings.chs  Decode.hs  Encode.hs  Optics.hs  Types.hs
test/: doctest.hs  test.conf  trivial.hs
