name:                libconfig
version:             0.1.0.0
synopsis:            Haskell bindings to libconfig
description:
            Low-level FFI bindings to the <http://www.hyperrealm.com/libconfig/ libconfig>
            configuration file library.
license:             BSD3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           2015 Matthew Peddie <mpeddie@gmail.com>
category:            Language
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:           git
  location:       git@github.com/peddie/libconfig-haskell

library
  exposed-modules:     Language.Libconfig
  -- other-modules:
  extra-libraries:     config
  build-depends:       base >=4.6 && <4.9
  hs-source-dirs:      src
  build-tools:         c2hs
  default-language:    Haskell2010

Test-Suite trivial
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  HS-Source-Dirs: test
  Ghc-Options: -threaded -Wall -O2
  Main-Is: trivial.hs
  Build-Depends: base
               , libconfig
               , transformers >= 0.4
